Flow fixes and menu collapsing on mobile

--- a/kuma/static/styles/components/structure/page-header/nav-main.scss
+++ b/kuma/static/styles/components/structure/page-header/nav-main.scss
@@ -113,25 +113,17 @@ New main navigation menu
     .top-level-entry-container {
         position: relative;
 
-        ul[aria-hidden='true'] {
-            display: none;
-        }
-
-        ul[aria-hidden='false'] {
-            display: block;
-        }
-
         @media #{$mq-tablet-and-up} {
             &:hover ul,
             &:focus-within ul {
-                display: inherit;
-
-                @media #{$mq-tablet-and-up} {
-                    display: block;
-                    position: absolute;
-                    width: max-content;
-                }
+                display: block;
+                position: absolute;
+                width: max-content;
             }
+        }
+
+        ul.show {
+            display: block;
         }
 
         button {
